# StalkCompetitor

./: README.md  pyproject.toml
src/stalkcompetitor/: app.py  crew.py  main.py
src/stalkcompetitor/config/: agents.yaml  tasks.yaml
src/stalkcompetitor/templates/: index.html
src/stalkcompetitor/tools/: search_tool.py
